--- a/index.css
+++ b/index.css
@@ -42,9 +42,6 @@ section .player {
   grid-template-columns: 15fr 9fr;
   place-items: center;
 }
-section .player.active {
-  grid-template-columns: 15fr 0;
-}
 section .player .name-score {
   position: relative;
   width: 100%;
@@ -80,6 +77,18 @@ section .player .in-de {
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+section .player .in-de {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+section .player.active .in-de {
+  display: flex;
 }
 section .player .in-de .plus,
 section .player .in-de .mine {
